Adding Glass shaders with different IORs gives different results for Path Tracing and Branched Path Tracing #45583

Closed
opened 2015-07-27 23:59:20 +02:00 by Lukas Stockner · 8 comments
Member

System Information
Linux Mint 17.1, 64bit

Blender Version
Broken: 2.75a release (hash c27589e)

Short description of error
Combining three Glass BSDF nodes with different IORs where one is RGB(1,0,0), one is RGB(0,1,0) and one is RGB(0,0,1) with two Add nodes, probably to create a dispersion-like effect, results in different results when rendered with either Branched Path Tracing or regular Path Tracing. Also, modifying the order in which the nodes are added together changes the result.

Exact steps for others to reproduce the error

  • Open the attached .blend file
  • Render
  • Switch to Branched Path Tracing
  • Render on a different slot
  • Compare

A similar .blend file was posted by bubblebobble on #blendercoders, so credit for finding this one goes to him.
Also, I've just assigned this one to me as I'll try to trace down the issue, but thought that posting it here might be a good idea.

PT-BPT-bug.blend

**System Information** Linux Mint 17.1, 64bit **Blender Version** Broken: 2.75a release (hash c27589e) **Short description of error** Combining three Glass BSDF nodes with different IORs where one is RGB(1,0,0), one is RGB(0,1,0) and one is RGB(0,0,1) with two Add nodes, probably to create a dispersion-like effect, results in different results when rendered with either Branched Path Tracing or regular Path Tracing. Also, modifying the order in which the nodes are added together changes the result. **Exact steps for others to reproduce the error** - Open the attached .blend file - Render - Switch to Branched Path Tracing - Render on a different slot - Compare A similar .blend file was posted by bubblebobble on #blendercoders, so credit for finding this one goes to him. Also, I've just assigned this one to me as I'll try to trace down the issue, but thought that posting it here might be a good idea. [PT-BPT-bug.blend](https://archive.blender.org/developer/F213567/PT-BPT-bug.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Lukas Stockner self-assigned this 2015-07-27 23:59:20 +02:00
Author
Member

Added subscriber: @LukasStockner

Added subscriber: @LukasStockner

Added subscriber: @Sergey

Added subscriber: @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'

First of all, it doesn't seem it is an energy conserving shader? So it's possible that branched path tracing will give different result, because it evaluates all the closures instead of picking random one.

Modifying order of shaders changes which exact closure controls whether ray is reflected or transmitted, changing overall look of the render result.

Don't really think you can solve this issue, non-conserving energy is usually asking for such kind of artifacts. However if you're still looking into the issue and want some ground-truth image, you can split the scene into three and render R,G,B channels separately in them and them merge in compositor (you'll need to use single Glass shader in each of the scenes).

First of all, it doesn't seem it is an energy conserving shader? So it's possible that branched path tracing will give different result, because it evaluates all the closures instead of picking random one. Modifying order of shaders changes which exact closure controls whether ray is reflected or transmitted, changing overall look of the render result. Don't really think you can solve this issue, non-conserving energy is usually asking for such kind of artifacts. However if you're still looking into the issue and want some ground-truth image, you can split the scene into three and render R,G,B channels separately in them and them merge in compositor (you'll need to use single Glass shader in each of the scenes).

This issue was referenced by 4737b12462

This issue was referenced by 4737b1246241fd575921f93ddf229da656c7fb5a

Changed status from 'Archived' to: 'Resolved'

Changed status from 'Archived' to: 'Resolved'

This issue was referenced by blender/cycles@46bdbb2bd4

This issue was referenced by blender/cycles@46bdbb2bd4bf82513699869859510ce58958a17c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45583
No description provided.