intern/cycles/kernel/svm/svm_closure.h
@@ -30,6 +30,7 @@ ccl_device void svm_node_glass_setup(ShaderData *sd, ShaderClosure *sc, int type
 		else {
 			sc->data0 = 0.0f;
 			sc->data1 = 0.0f;
+			sc->data2 = 0.0f;
 			ccl_fetch(sd, flag) |= bsdf_reflection_setup(sc);
 		}
 	}
@@ -393,6 +394,7 @@ ccl_device void svm_node_closure_bsdf(KernelGlobals *kg, ShaderData *sd, float *
 					sc->N = N;
 					sc->data0 = 0.0f;
 					sc->data1 = 0.0f;
+					sc->data2 = 0.0f;
 					ccl_fetch(sd, flag) |= bsdf_transparent_setup(sc);
 				}
 			}
@@ -545,6 +547,7 @@ ccl_device void svm_node_closure_volume(KernelGlobals *kg, ShaderData *sd, float
 			if(sc) {
 				sc->data0 = param2; /* g */
 				sc->data1 = 0.0f;
+				sc->data2 = 0.0f;
 				ccl_fetch(sd, flag) |= volume_henyey_greenstein_setup(sc);
 			}
 			break;
